static/styles.css
::-webkit-scrollbar-corner {background-color: transparent;}

[data-theme="dark"] {
  --primary: rgb(204, 52, 62);
  --primary-hover: #f53a4c;
  --primary-active: #81212b;
  --primary-focus: rgba(204, 52, 62, 0.25);
  --card-background-color: rgb(32, 30, 30);
  --card-background-color-2: rgb(44, 42, 42);
  --bg-color: rgb(23, 22, 22);
  --divider: 2px solid rgba(255,255,255,0.15);
  
  --main-text-color: #edf0f3; 
  --sub-text-color: #bbc6ce;
  
  --fc-today-bg-color: transparent;
  --fc-button-bg-color: var(--primary);
  --fc-page-bg-color: var(--bg-color);
  --fc-button-hover-bg-color: var(--primary-hover);
  /* --fc-button-hover-border-color: var(--primary-hover); */
  --fc-button-active-border-color: var(--primary-active);
}

article header, article footer {
  background-color: var(--card-background-color) !important;
  margin: 0 !important;
}

main {
  padding: 1rem !important;
}

section {
  margin-bottom: 1em;
}

a, button {
  box-shadow: none !important;
  border: 0;
}

:root {
  background-color: var(--bg-color);
}

h1,h2,h3,h4,h5,h6 {
  margin: 0;
}

article {
  margin-top: 2em;
  margin-bottom: 2em;
  padding: 2em;
}

::before {
  vertical-align: unset;
}

nav {
  height: 3.5rem;
  z-index: 99;
  position: sticky;
  top: 0;
  right: 0;
  left: 0;
  padding: 0 var(--spacing);
  background-color: var(--bg-color);
  border-bottom: 2px solid rgba(255,255,255,0.15);
}

input, select, textarea {
  background-color: var(--bg-color);
  border-width: 1;
  border-color: Transparent;
  box-shadow: None;
}

input:focus, select:focus, textarea:focus {
  border-color: var(--color) !important;
}

.container {
  padding-top: 1em;
}

/* FullCalendar */

.allowed-resource {
  background-color: rgba(255, 255, 255, 0.05);
}

dialog {
  background-color: rgba(23, 22, 22, 0.3);
}

dialog article {
  padding: 0;
  width: 80rem;
}

dialog form {
  margin: 2rem;
}

dialog form > * {
  width: 100%;
}

.dialog-header {
  display: flex;
}

.dlg-button {
  border: 1px solid transparent !important;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: .5rem !important;
  padding: .5rem !important;
}

.dlg-button:hover {
  border: 1px solid #e8e9e9 !important;
}

dialog h3 {
  color: #e8e9e9;
  margin: .5rem;
  margin-right: 0;
  padding: 0 0 0 .5rem;
}

dialog header, dialog footer {
  display: flex;
  align-items: center;
  width: 100%;
  padding: 0 !important;
}

dialog header {
  border-bottom: var(--divider);
  justify-content: space-between;
}

dialog footer {
  border-top: var(--divider);
  justify-content: flex-end;
}

textarea {
  resize: none;
}

.fc .fc-button-primary {
  border-width: 0 !important;
}

.fc .fc-button-primary:not(:disabled).fc-button-active, .fc .fc-button-primary:not(:disabled):active {
  background-color: var(--primary-active);
}

.fc-toolbar-chunk {
  display: flex;
  gap: .5em;
  margin: .5em;
}

.fc-direction-ltr .fc-toolbar>*>:not(:first-child) {
  margin: 0;
}

.fc .fc-button:focus {
  border-width: 0;
}

.fc .fc-toolbar.fc-header-toolbar {
  margin-bottom: .5em;
}

.fc-scrollgrid-section > td:first-child .fc-scroller {
  overflow: hidden !important;
}

table {
  margin: 0;
}

.fc-scrollgrid-sync-inner {
  display: inline-block !important;
}

table[role=grid] tbody tr:nth-child(odd) {
  background-color: transparent;
}

table a {
  color: var(--h1-color);
}

table a:hover {
  text-decoration: none;
}

.fc .fc-timeline-now-indicator-arrow, .fc .fc-timeline-now-indicator-line {
  border-color: var(--primary);
}

/* event priority buttons */

button.standard {
  border-color: #edf0f3;
}

button.notime {
  border-color: var(--primary);
}

button.uncertain {
  border-color: #efb700;
}

button.standard > img,
button.uncertain > img {
  filter: invert(100%);
  transition: filter var(--transition);
}

button.certain {
  border-color: #008450;
}

button.standard.pressed,
button.standard:hover {
  background-color: #edf0f3;
  color: var(--bg-color);
}

button.notime.pressed,
button.notime:hover {
  background-color: var(--primary);
}

button.uncertain.pressed,
button.uncertain:hover {
  background-color: #efb700;
  color: var(--bg-color);
}

button.standard.pressed > img,
button.standard:hover > img,
button.uncertain.pressed > img,
button.uncertain:hover > img {
  filter: invert(0%);
}

button.certain.pressed,
button.certain:hover {
  background-color: #008450;
}

.icon-button {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: .4em .65em !important;
}

.icon-button > img {
  margin-right: .25em;
  margin-left: .25em;
}

.calendar-footer {
  display: flex;
  justify-content: flex-end;
  margin-top: 1em;
}

.event-priority-button {
  color: #e8e9e9;
  border: .1em;
  border-style: solid;
  font-weight: bold;
}

/* Scrollbar */

::-webkit-scrollbar {
  height: 12px;
  width: 12px;
}

::-webkit-scrollbar-thumb {
  background-color: var(--primary);
  border-radius: 1em;
}

::-webkit-scrollbar-thumb:hover {
  background-color: var(--primary-hover);
}

/* Login */

main#mini {
  max-width: 30rem;
}

.mini-form > h1 {
  text-align: center;
  margin-bottom: 1em;
}

.mini-form > img {
  display: block;
  margin: .5em auto .5em auto;
}

/* Home */

nav h6 {
  padding: var(--nav-link-spacing-vertical) var(--nav-link-spacing-horizontal);
}

a#calendar-anchor {
  position: absolute;
  right: 1rem;
  bottom: 1rem;
}

section.home-orgs {
  max-width: 100%;
  display: flex;
  gap: 1rem;
  flex-wrap: nowrap;
  overflow-y: scroll;
}

section.home-orgs > * {
  flex-shrink: 0;
}

figure.organization-card-logo {
  border-radius: 1rem;
  overflow: hidden;
}

article.organization-card {
  position: relative;
  height: 20rem;
  width: 16rem;
  padding: 0;
  margin: 1rem 0 1rem 0;
  border-radius: 1rem;
  border: 2px solid transparent;
  transition: border var(--transition);
}

article.add-organization {
  background-color: transparent;
  border-color: var(--card-background-color-2);
}

article.add-organization > .organization-card-anchor {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  gap: 1rem;
}

article.organization-card:hover {
  border: 2px solid #e8e9e9;
}

.organization-card-anchor {
  height: 100%;
  width: 100%;
}

.organization-card figure {
  max-height: 20rem;
  margin: 0;
}

.organization-card footer {
  height: 4rem;
  display: flex;
  padding: 0 1rem 0 1rem !important;
  align-items: center;

  background-color: transparent !important;
  max-width: 100%;
  overflow: hidden;
  flex-grow: 0;
}

.organization-card footer h3 {
  margin: 0;
  padding: 0;
  color: var(--main-text-color);
}

/* Management */

aside {
  z-index: 99;
  position: fixed;
  left: 0;
  top: 3.5rem;
  bottom: 0;
  width: 12rem;
  padding: 1rem;
  border-right: var(--divider);
  overflow-x: hidden;
  overflow-y: auto;
  background-color: var(--bg-color);
}

aside b {
  text-transform: uppercase;
  font-size: small;
}

aside ul {
  margin: 0;
  padding: 0;
}

aside ul li {
  margin: 0;
  padding: 0;
}

.management-main {
  margin-left: 12rem;
  width: unset;
  display: flex;
  justify-content: center;
}

.management-main.team {
  margin-left: unset;
}

.management-main section {
  width: 32rem;
}

.management-main h2 {
  text-align: center;
}

.management-header {
  margin-bottom: 2rem;
  display: flex;
  flex-wrap: wrap;
  gap: 1rem;
  align-items: center;
  justify-content: center;
}

.logo-header {
  flex-shrink: 0;
  background-color: var(--card-background-color);
  width: 8rem; 
  height: 8rem;
  border: 2px solid var(--main-text-color);
  border-radius: 50%;
  overflow: hidden;
}

/* .logo-header.team {
  border-radius: .5em;
} */

.org-logo-header img {
  display: block;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.normal-text {
  font-weight: normal;
}

.management-main-button {
  flex-shrink: 0;
  border-radius: .5em;
  background-color: var(--card-background-color);
  border: 1px solid transparent;
}

.management-main-button:hover {
  border-color: var(--main-text-color);
}

.management-main-button-wrapper {
  margin-bottom: 2rem;
}

.management-main-button-wrapper figcaption {
  color: var(--main-text-color);
}

.user-preview-item {
  margin-bottom: .25rem;
  display: flex;
  align-items: center;

  max-width: 100%;
  white-space: nowrap;
  overflow: hidden;
}

.user-preview-name {
  flex-grow: 0;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.\.user-preview-pic {
  background-color: var(--card-background-color);
  border: 1px solid var(--sub-text-color);
  border-radius: 50%;
  margin-left: .5em;
  margin-right: .5em;
  padding: .1em;

  flex-shrink: 0;
  display: flex;
  align-items: center;
  justify-content: center;
}

.team-card {
  position: relative;
  overflow: hidden;
}

.team-card a,
.team-card h3 {
  position: relative;
  z-index: 3;
}

.team-card::before {
  left: -25%;
  background-color: var(--primary); 
  opacity: 0.10;
  content: "";
  display: block;
  position: absolute;
  top: 0;
  z-index: 1;
  height: 100%;
  width: 93%;
  -webkit-transform: skew(-30deg);
  transform: skew(-30deg);
}

/* Team-Page */

#team-header-wrapper {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  gap: .75em;
}

#members-header {
  margin-bottom: 1em;
}

#member-cards {
  display: flex;
  flex-direction: column;
  gap: 3em;
}

.member-card {
  position: relative;
  padding: unset !important;
  margin: 0;
  background-color: unset;
  box-shadow: unset;
  padding: 1em;
  padding-right: 0;
}

.member-card-image {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  left: 0;
  width: 8em;
  height: 8em;
  background-color: var(--card-background-color-2);
  border-radius: 50%;
  border: 2px solid var(--card-background-color);
  overflow: hidden;
}

.member-card-detail {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: unset;
  margin-left: 4.5em;
  padding: 0;
  padding-left: 4.5em;
  padding-right: 0em;
  height: 6em;
  border-radius: .5em;
}

.member-roles {
  display: inline-flex;
  align-items: center;
  gap: .25em;
}

.member-role {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  gap: .25em;
  padding: .1em 1em .1em 1em;
  margin: 0;

  border: 1px solid var(--color);
  border-radius: 1em;
}

.member-role.you {
  border-color: #008450;
  color: #008450;
}

.change-member-role-icon {
  border-radius: 50%;
  background-color: var(--card-background-color-2);
  border: 1px solid #bbc6ce;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: .1em;
  margin: .1em;
  height: 2em;
  width: 2em;
}

/* Error */

.error-block {
  position: absolute;
  margin: auto;
  padding: auto;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.copy-input {
  display: flex;
  /* margin: 2.5em 2.5em 0 2.5em; */
}

.copy-input > * {
  border-radius: unset;
  margin: 0 !important;
  padding: 1em;
}

.copy-input > input {
  border-top-left-radius: .5em;
  border-bottom-left-radius: .5em;
}

.copy-input > button {
  width: 4em;
  background-color: var(--card-background-color-2);
  border-top-right-radius: .5em;
  border-bottom-right-radius: .5em;
}

.dlg-disclaimer {
  margin-top: .5em !important;
}

#dlg-main {
  margin: 2.5em;
  /* display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center; */
}

.copy-container {
  width: 100%;
}

